[package]
name = "rollbar-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
backtrace = "0.3"
futures-util = "0.3"
rollbar = { git = "https://github.com/eskil-booli/rollbar-rs.git" }
